<resources>
    <string name="app_name">두툼</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_Save">저장</string>
    <string name="dialog_Cancel">입력취소</string>
    <string name="dialog_OK">입력완료</string>
    <string name="input_amount">사용 금액을 입력해주세요.</string>
    <string name="input_comment">추가 설명을 입력해주세요.</string>

    <string name="string_empty_bill">지출 내역이 없습니다.</string>
    <string name="string_bill_add_new_bill">새로운 기록 입력</string>

    <string name="activity_sign_in">로그인</string>
    <string name="activity_sign_up">회원가입</string>
    <string name="activity_login_id">example@email.com</string>
    <string name="activity_login_password">비밀번호</string>
    <string name="activity_login_password_check">비밀번호 확인</string>

    <string name="msg_signup_complete">회원가입에 성공했습니다.</string>
    <string name="msg_guide_groupcode">그룹을 만들거나 \n초대받은 그룹의 코드를 입력하여\n두툼을 이용해주세요.</string>

    <string name="string_drink">음료</string>
    <string name="string_meal">식사</string>
    <string name="string_shopping">쇼핑</string>
    <string name="string_movie">영화</string>
    <string name="string_game">오락</string>

    <string name="ac_sign_in_guide">이메일 주소로 로그인해주세요</string>
    <string name="ac_sign_in_login_btn">로그인</string>
    <string name="ac_sign_in_sign_up_btn">DOTOOM 회원가입 ></string>

    <string name="ac_sign_up_label">SIGN UP</string>
    <string name="ac_sign_up_user_name">이름</string>
    <string name="ac_sign_up_sign_up_btn">가입하기</string>

    <string name="str_our">OUR</string>
    <string name="str_my">MY</string>
    <string name="str_your">YOUR</string>
</resources>
