<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="340dp">

    <LinearLayout
        android:id="@+id/layoutPartnerBill"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:weightSum="1"
        android:orientation="vertical"
        android:background="@color/color_bill_background_white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/color_bill_background_tint"
            android:text="@string/string_bill_add_new_bill"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTextNewBillAmount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color_bill_text_partner"
            android:gravity="left|center_vertical"
            android:digits="0123456789"
            android:hint="사용 금액"/>

        <EditText
            android:id="@+id/editTextNewBillCategory"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color_bill_text_partner"
            android:gravity="left|center_vertical"
            android:hint="Category"/>

        <EditText
            android:id="@+id/editTextNewBillComment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color_bill_text_partner"
            android:gravity="left|center_vertical"
            android:hint="내용"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:weightSum="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBillCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_margin="3dp"
                android:text="@string/dialog_Cancel"
                android:background="@color/color_bill_background"/>

            <Button
                android:id="@+id/btnBillSave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_margin="3dp"
                android:text="@string/dialog_Save"
                android:background="@color/color_bill_background_tint"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>